fix(eslint-config): correct typechecking config of typescript-eslint plugin
Adjusted the typechecking configuration in the `typescript-eslint` plugin to ensure accurate and efficient type analysis. This includes refining the TypeScript configuration file reference to explicitly point to `./tsconfig.json`, ensuring that the ESLint process leverages the correct TypeScript context for projects. Additionally, streamlined the rule extraction process by utilizing a new utility function, `getConfigRules`, which simplifies the aggregation of ESLint rules from various sources, enhancing maintainability and readability of the configuration code. Updated dependencies to include new utility modules, ensuring that the configuration setup benefits from the latest improvements and bug fixes.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -63,6 +63,8 @@
   "devDependencies": {
     "@types/eslint__eslintrc": "2.1.1",
     "@types/eslint__js": "8.42.3",
+    "@unshared/collection": "workspace:*",
+    "@unshared/types": "workspace:*",
     "eslint": "9.1.1",
     "typescript": "5.4.5"
   }
