--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -42,6 +42,7 @@
     "@stylistic/eslint-plugin": "1.7.2",
     "@unshared/collection": "workspace:*",
     "@unshared/types": "workspace:*",
+    "eslint-merge-processors": "0.1.0",
     "eslint-plugin-antfu": "2.1.2",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-html": "8.1.1",
@@ -57,6 +58,7 @@
     "eslint-plugin-vitest": "0.5.4",
     "eslint-plugin-vue": "9.25.0",
     "eslint-plugin-yml": "1.14.0",
+    "eslint-processor-vue-blocks": "0.1.2",
     "jsonc-eslint-parser": "2.4.0",
     "typescript-eslint": "7.7.1",
     "vue-eslint-parser": "9.4.2",
