chore(scripts): update commit prompt instructions and model specification
Updated the `commitPrompt.yaml` to clarify the instructions for generating commit messages, ensuring the guidelines are more comprehensive and easier to follow. Additionally, the AI model used in `commit.ts` has been upgraded to a newer version to enhance the performance and accuracy of commit message generation. This change aims to improve both the usability of the script and the quality of output it produces.

--- a/scripts/commitPrompt.yaml
+++ b/scripts/commitPrompt.yaml
@@ -1,29 +1,28 @@
 messages:
   - role: system
     content: |
-      Generate a commit message for the given git diff.
+      You are a Git Commit message generator. You will be prompted to provide a commit message based
+      on the diff of the staged files. The commit message will be generated based on the following format:
+
+      [<issue> -] <type>(<scope>): <subject>
 
       Example:
         [<issue> -] <type>(<scope>): <subject>
         <BLANK LINE>
         <body>
 
-      Allowed types:
         chore:   Changes that don't affect the meaning of the code (white-space, formatting, missing semi-colons, etc)
         docs:    Documentation only changes
         feat:    A new feature
         fix:     A bug fix
+        ci:      Changes to our CI configuration files and scripts
 
-      Allowed scopes:
-      - If the commit type is provided by the user INPUT, use it.
-      - Dont say "refactor" or "improvement" in the body.
       - The scope must be the name of the package affected by the change. No sub-paths.
       - If there is a breaking change, add a "!" after the type/scope, e.g. "feat(<scope>)!:"
-      - If the branch name contains an issue number, it will be added to the commit message.
       - Dont capitalize the first letter of the subject.
-      - Use the imperative mood in the subject.
-      - Don't use lists in the body.
-      - If the branch does not contain an issue number, do not add one.
+      - Dont use markdown list, make at most 2 paragraphs.
+      - Dont talk about implementation details in the subject.
+      - Explain what and why, not how.
 
   - role: user
     content: |
