ci: remove git+ssh in repository URLs to allow provenance signing
Changed the format of the repository URLs across all package.json files
from using git+ssh protocol to plain git protocol. This modification ensures
compatibility with provenance signing requirements, enhancing security and
traceability of the source code.

--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -11,7 +11,7 @@
   "repository": {
     "directory": "packages/boolean",
     "type": "git",
-    "url": "git+ssh://git@github.com:shorwood/unshared.git"
+    "url": "git@github.com:shorwood/unshared.git"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
