--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -27,6 +27,14 @@
     "README.md",
     "LICENSE.md"
   ],
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowAny": [
+        "eslint",
+        "typescript"
+      ]
+    }
+  },
   "peerDependencies": {
     "eslint": ">=9",
     "typescript": ">=5"
