--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
           NPM_CONFIG_PROVENANCE: true
 
       # --- If all goes well, create a release on GitHub.
-      - run: npx changelogithub --no-group
+      - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: npx changelogithub --no-group
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
