feat(types): introduce `Asserted` and `Assertor` types for enhanced type assertions
Introduced new TypeScript utility types `Asserted` and `Assertor` to improve the handling of type assertions within the library. The `Asserted` type helps in deriving a type from an assertor function, facilitating stricter type checks and enhancing type safety. The `Assertor` type defines a function that asserts a value is of a specific type, which is useful for writing type-safe assertive functions. These additions aim to provide developers with more robust tools for building type-safe applications.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,6 +17,12 @@
     "./Any": {
       "types": "./dist/Any.d.ts"
     },
+    "./Asserted": {
+      "types": "./dist/Asserted.d.ts"
+    },
+    "./Assertor": {
+      "types": "./dist/Assertor.d.ts"
+    },
     "./Bind": {
       "types": "./dist/Bind.d.ts"
     },
