feat(string): introduce `toSearchParams` utility function
This commit adds a new utility function `toSearchParams` to the `@unshared/string` package. The function converts an object, potentially containing arrays, to a `URLSearchParams` instance, supporting various formats for array encoding. This enhancement addresses the need for flexible query string generation, particularly useful in web development scenarios where URL parameter serialization is required.

This functionality brings significant flexibility and control over the serialization process, accommodating different specifications and preferences for handling array parameters in query strings.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -166,6 +166,11 @@
       "types": "./dist/toPathCase.d.ts",
       "import": "./dist/toPathCase.js"
     },
+    "./toSearchParams": {
+      "require": "./dist/toSearchParams.cjs",
+      "types": "./dist/toSearchParams.d.ts",
+      "import": "./dist/toSearchParams.js"
+    },
     "./toSnakeCase": {
       "require": "./dist/toSnakeCase.cjs",
       "types": "./dist/toSnakeCase.d.ts",
