feat(types): add `Pretty` type to enhance IDE readability
Introduced a new `Pretty` type in the `types` package to improve the readability of complex, nested type signatures in the IDE. This type utility unwraps deeply nested types, making them easier to understand and work with during development. This addition aims to enhance developer productivity by decluttering the type signatures displayed in the IDE, particularly useful for projects with extensive use of TypeScript's advanced type features.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -272,6 +272,9 @@
     "./Predicator": {
       "types": "./dist/Predicator.d.ts"
     },
+    "./Pretty": {
+      "types": "./dist/Pretty.d.ts"
+    },
     "./Primitive": {
       "types": "./dist/Primitive.d.ts"
     },
