chore(functions): add missing exports for `toPredicate`
Added the missing export entries for the `toPredicate` function in the `functions` package. This update ensures that `toPredicate` is correctly accessible as part of the package's public API, aligning with the existing structure for other utility functions. This change facilitates easier and more consistent usage of utility functions across different projects.

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -156,6 +156,11 @@
       "types": "./dist/throttle.d.ts",
       "import": "./dist/throttle.js"
     },
+    "./toPredicate": {
+      "require": "./dist/toPredicate.cjs",
+      "types": "./dist/toPredicate.d.ts",
+      "import": "./dist/toPredicate.js"
+    },
     "./tries": {
       "require": "./dist/tries.cjs",
       "types": "./dist/tries.d.ts",
