chore(examples/nuxt): integrate Storybook for component visualization
Introduced Storybook into the Nuxt example project to enhance component development and visualization. This setup includes the basic Storybook configuration and necessary package adjustments to support this integration.

--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -3,17 +3,47 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "node .output/server/index.mjs"
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxi generate",
+    "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "3.12.1",
+    "@nuxt/devtools": "1.2.0",
+    "@nuxtjs/storybook": "8.0.0",
+    "@storybook-vue/nuxt": "0.2.7",
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/addon-interactions": "8.0.9",
+    "@storybook/addon-links": "8.0.9",
+    "@storybook/blocks": "8.0.9",
+    "@storybook/builder-vite": "8.0.9",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/vue3": "8.0.9",
+    "@types/node": "^20.12.8",
     "@unocss/nuxt": "0.59.4",
+    "@unocss/preset-icons": "0.59.4",
+    "@unocss/preset-mini": "0.59.4",
+    "@unocss/preset-web-fonts": "0.59.4",
     "@unocss/reset": "0.59.4",
+    "@unshared/binary": "workspace:*",
+    "@unshared/collection": "workspace:*",
+    "@unshared/color": "workspace:*",
+    "@unshared/decorators": "workspace:*",
+    "@unshared/eslint-config": "workspace:*",
+    "@unshared/fs": "workspace:*",
+    "@unshared/functions": "workspace:*",
+    "@unshared/process": "workspace:*",
+    "@unshared/string": "workspace:*",
+    "@unshared/types": "workspace:*",
     "@unshared/unocss-preset": "workspace:*",
+    "@unshared/validation": "workspace:*",
     "@unshared/vue": "workspace:*",
+    "@vueuse/core": "10.9.0",
+    "@vueuse/nuxt": "10.9.0",
     "nuxt": "3.11.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "8.0.9",
     "unocss": "0.59.4"
   }
 }
