chore(vue): add `vue-router` to devDependencies
Updated the `package.json` for the vue package to include `vue-router` version 4.3.2 in the devDependencies. This ensures that developers have the necessary version of `vue-router` available when working with the development environment, facilitating compatibility and testing with the latest features of `vue-router`.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -78,6 +78,7 @@
     "@vue/test-utils": "2.4.5",
     "leaflet": "1.9.4",
     "markdown-it": "14.1.0",
-    "vue": "3.4.26"
+    "vue": "3.4.26",
+    "vue-router": "4.3.2"
   }
 }
