ci: separate publishing workflow from CI workflow
Separated the publishing process into its own GitHub Actions workflow, `publish.yml`, and removed related steps from `ci.yml`. This change ensures that the CI process focuses solely on integration and testing, while publishing is handled only when specific conditions (tag push) are met. This division enhances clarity and maintains best practices for CI/CD pipelines.

Additionally, corrected the quotation marks used in the commit message within the `release.ts` script. This change ensures that the commit message does not include extraneous characters, improving the clarity and execution of automated release processes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,6 @@ permissions:
 
 on:
   push:
-    tags:
-      - v*
     branches:
       - main
   pull_request:
@@ -15,7 +13,7 @@ on:
 
 jobs:
   ci:
-    name: Continuous Integration & Deployment
+    name: Continuous Integration & Deployment to Private Registry
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,7 +26,7 @@ jobs:
         with:
           node-version: 20.x
           cache: "pnpm"
-          registry-url: "https://registry.npmjs.org/"
+          registry-url: "https://npm.hsjm.dev"
 
       # --- Install, build, and test.
       - run: pnpm install
@@ -41,17 +39,3 @@ jobs:
         run: pnpm publish:ci --registry https://npm.hsjm.dev
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_PRIVATE}}
-
-      # --- Publish to NPM registry on main branch. (Only on tags)
-      - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-        run: pnpm publish:ci --registry https://registry.npmjs.org
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-          NPM_CONFIG_PROVENANCE: true
-
-      # --- If all goes well, create a release on GitHub.
-      - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-        run: npx changelogithub --no-group
-        continue-on-error: true
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
