ci: standardize tag usage across publishing workflows
Updated the CI configuration to ensure consistent tag usage during the publishing steps in both CI and publish workflows. This change explicitly specifies the `--tag` option for the `pnpm publish:ci` command to use `next` for CI deployments and `latest` for production releases. Additionally, adjusted the `pnpmPublish` function in the publish script to accept a `tag` parameter, enhancing the control over versioning and aligning with best practices for package publishing.

This modification helps maintain consistency in deployment environments and version management, ensuring that the correct versions are deployed to the appropriate registries with the intended tags.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,6 @@ jobs:
 
       # --- Publish to private registry on main branch.
       - if: github.event_name == 'push'
-        run: pnpm publish:ci --registry https://npm.hsjm.dev
+        run: pnpm publish:ci --registry https://npm.hsjm.dev --tag next
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_PRIVATE}}
