--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,12 +32,12 @@ jobs:
       - run: pnpm test:ci
 
       # --- Publish to private registry on main branch.
-      - run: pnpm publish:ci --registry https://npm.hsjm.dev
+      - run: pnpm publish:ci --registry https://npm.hsjm.dev --tag latest
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_PRIVATE}}
 
       # --- Publish to NPM registry on main branch. (Only on tags)
-      - run: pnpm publish:ci --registry https://registry.npmjs.org
+      - run: pnpm publish:ci --registry https://registry.npmjs.org --tag latest
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_PROVENANCE: true
