chore(vue): add missing dependency to package.json
Added `@unshared/types` as a dependency in the `package.json`
of the `@unshared/vue` package. This ensures that the package
has all necessary types available, aligning it with other packages
that already include this dependency. This change helps maintain
consistency across the repository and avoids potential type-related
issues during development and build processes.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -160,6 +160,7 @@
   "dependencies": {
     "@unshared/collection": "workspace:*",
     "@unshared/functions": "workspace:*",
+    "@unshared/types": "workspace:*",
     "@vueuse/core": "10.9.0"
   },
   "devDependencies": {
