--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -17,9 +17,9 @@
     "@storybook/addon-links": "8.0.9",
     "@storybook/blocks": "8.0.9",
     "@storybook/builder-vite": "8.0.9",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/testing-library": "0.2.2",
     "@storybook/vue3": "8.0.9",
-    "@types/node": "^20.12.8",
+    "@types/node": "20.12.8",
     "@unocss/nuxt": "0.59.4",
     "@unocss/preset-icons": "0.59.4",
     "@unocss/preset-mini": "0.59.4",
@@ -41,8 +41,8 @@
     "@vueuse/core": "10.9.0",
     "@vueuse/nuxt": "10.9.0",
     "nuxt": "3.11.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "storybook": "8.0.9",
     "unocss": "0.59.4"
   }
