feat(vue): add `useOutsideEvent` hook to handle events outside elements
Introduced a new Vue composition function `useOutsideEvent` that allows developers to handle events that are triggered outside a specified element. This can be particularly useful for implementing features like closing a modal when clicking outside of it, or hiding dropdowns when the focus is shifted elsewhere. This addition enhances the usability and flexibility of handling DOM events in Vue applications.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -121,6 +121,11 @@
       "types": "./dist/useEventBus.d.ts",
       "import": "./dist/useEventBus.js"
     },
+    "./useOutsideEvent": {
+      "require": "./dist/useOutsideEvent.cjs",
+      "types": "./dist/useOutsideEvent.d.ts",
+      "import": "./dist/useOutsideEvent.js"
+    },
     "./wrapTransition": {
       "require": "./dist/wrapTransition.cjs",
       "types": "./dist/wrapTransition.d.ts",
