feat(vue): introduce `defineSetupComponent` utility function
Added a new utility function `defineSetupComponent` to streamline the creation of Vue components using the setup function pattern. This function simplifies the definition of component setup logic and its context, promoting cleaner and more maintainable code. It also enhances the type safety by providing typed props and slots, facilitating better development experience with TypeScript. This addition aims to improve the developer's productivity and code quality in Vue applications.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -51,6 +51,11 @@
       "types": "./dist/cleanClasses.d.ts",
       "import": "./dist/cleanClasses.js"
     },
+    "./defineSetupComponent": {
+      "require": "./dist/defineSetupComponent.cjs",
+      "types": "./dist/defineSetupComponent.d.ts",
+      "import": "./dist/defineSetupComponent.js"
+    },
     "./exposeToDevtool": {
       "require": "./dist/exposeToDevtool.cjs",
       "types": "./dist/exposeToDevtool.d.ts",
