feat(vue): add `BaseBadge` component with accessibility features
Introduced a new `BaseBadge` component in the Vue package to enhance UI design options. This component supports icons, labels, and an optional close button, leveraging accessibility attributes like `aria-label` and `aria-labelledby` for better accessibility and SEO. The implementation utilizes the existing `useBaseRenderable` for consistent behavior with other components, ensuring a seamless integration within the Vue package ecosystem.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -21,6 +21,11 @@
       "types": "./dist/BaseAlerts.d.ts",
       "import": "./dist/BaseAlerts.js"
     },
+    "./BaseBadge": {
+      "require": "./dist/BaseBadge.cjs",
+      "types": "./dist/BaseBadge.d.ts",
+      "import": "./dist/BaseBadge.js"
+    },
     "./BaseButton": {
       "require": "./dist/BaseButton.cjs",
       "types": "./dist/BaseButton.d.ts",
@@ -40,6 +45,11 @@
       "require": "./dist/BaseInputToggle.cjs",
       "types": "./dist/BaseInputToggle.d.ts",
       "import": "./dist/BaseInputToggle.js"
+    },
+    "./BaseTable": {
+      "require": "./dist/BaseTable.cjs",
+      "types": "./dist/BaseTable.d.ts",
+      "import": "./dist/BaseTable.js"
     },
     "./cleanAttributes": {
       "require": "./dist/cleanAttributes.cjs",
