--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -36,6 +36,11 @@
       "types": "./dist/BaseIcon.d.ts",
       "import": "./dist/BaseIcon.js"
     },
+    "./BaseInputFile": {
+      "require": "./dist/BaseInputFile.cjs",
+      "types": "./dist/BaseInputFile.d.ts",
+      "import": "./dist/BaseInputFile.js"
+    },
     "./BaseInputText": {
       "require": "./dist/BaseInputText.cjs",
       "types": "./dist/BaseInputText.d.ts",
@@ -105,6 +110,11 @@
       "require": "./dist/useBaseClickable.cjs",
       "types": "./dist/useBaseClickable.d.ts",
       "import": "./dist/useBaseClickable.js"
+    },
+    "./useBaseInputFile": {
+      "require": "./dist/useBaseInputFile.cjs",
+      "types": "./dist/useBaseInputFile.d.ts",
+      "import": "./dist/useBaseInputFile.js"
     },
     "./useBaseInputText": {
       "require": "./dist/useBaseInputText.cjs",
@@ -178,10 +188,13 @@
     }
   },
   "dependencies": {
+    "@codemirror/state": "6.4.1",
+    "@codemirror/view": "6.26.3",
     "@unshared/collection": "workspace:*",
     "@unshared/functions": "workspace:*",
     "@unshared/types": "workspace:*",
-    "@vueuse/core": "10.9.0"
+    "@vueuse/core": "10.9.0",
+    "codemirror": "6.0.1"
   },
   "devDependencies": {
     "@nuxt/kit": "3.11.2",
