feat(vue): introduce `BaseInputEditor` component for enhanced text editing
Added the `BaseInputEditor` component to provide a rich text editing experience within the application. This component utilizes the CodeMirror library to offer features such as syntax highlighting, customizable keybindings, and line wrapping. It supports reactive model binding using Vue's `useVModel` to ensure that state changes are efficiently managed. This enhancement aims to facilitate developers and users in handling complex text input scenarios more effectively.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -36,6 +36,11 @@
       "types": "./dist/BaseIcon.d.ts",
       "import": "./dist/BaseIcon.js"
     },
+    "./BaseInputEditor": {
+      "require": "./dist/BaseInputEditor.cjs",
+      "types": "./dist/BaseInputEditor.d.ts",
+      "import": "./dist/BaseInputEditor.js"
+    },
     "./BaseInputFile": {
       "require": "./dist/BaseInputFile.cjs",
       "types": "./dist/BaseInputFile.d.ts",
