--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -6,20 +6,25 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxi generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "storybook": "storybook dev --port 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1",
     "@nuxt/devtools": "1.3.1",
-    "@nuxtjs/storybook": "8.0.0",
-    "@storybook-vue/nuxt": "0.2.7",
-    "@storybook/addon-essentials": "8.1.0",
-    "@storybook/addon-interactions": "8.1.0",
-    "@storybook/addon-links": "8.1.0",
-    "@storybook/blocks": "8.1.0",
-    "@storybook/builder-vite": "8.1.0",
+    "@nuxtjs/storybook": "7.0.2",
+    "@storybook-vue/nuxt": "0.2.6",
+    "@storybook/addon-essentials": "8.0.8",
+    "@storybook/addon-interactions": "8.0.8",
+    "@storybook/addon-links": "8.0.8",
+    "@storybook/blocks": "8.0.8",
+    "@storybook/builder-vite": "8.0.8",
+    "@storybook/test": "8.0.8",
     "@storybook/testing-library": "0.2.2",
-    "@storybook/vue3": "8.1.0",
-    "@types/node": "20.12.12",
+    "@storybook/vue3": "8.0.8",
+    "@storybook/vue3-vite": "^8.1.1",
+    "@types/node": "^18.17.5",
     "@unocss/nuxt": "0.60.2",
     "@unocss/preset-icons": "0.60.2",
     "@unocss/preset-mini": "0.60.2",
@@ -43,7 +48,11 @@
     "nuxt": "3.11.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "storybook": "8.1.0",
+    "storybook": "8.0.8",
     "unocss": "0.60.2"
+  },
+  "dependencies": {
+    "codemirror": "6.0.1",
+    "vue": "3.4.27"
   }
 }
