feat(vue): introduce `BaseInputList` component and `useBaseInputList` composable
Added the `BaseInputList` component and `useBaseInputList` composable to the Vue package. This enhancement provides a flexible and reusable solution for creating input lists that can be easily integrated into forms and other UI elements. The new component supports customizable attributes, slots, and accessibility features, making it versatile for various use cases. The `useBaseInputList` composable offers detailed control over list behavior, including search functionality, selection handling, and custom value entries, enhancing the dynamic interaction capabilities of Vue applications.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -46,6 +46,11 @@
       "types": "./dist/BaseInputFile.d.ts",
       "import": "./dist/BaseInputFile.js"
     },
+    "./BaseInputList": {
+      "require": "./dist/BaseInputList.cjs",
+      "types": "./dist/BaseInputList.d.ts",
+      "import": "./dist/BaseInputList.js"
+    },
     "./BaseInputText": {
       "require": "./dist/BaseInputText.cjs",
       "types": "./dist/BaseInputText.d.ts",
@@ -120,6 +125,11 @@
       "require": "./dist/useBaseInputFile.cjs",
       "types": "./dist/useBaseInputFile.d.ts",
       "import": "./dist/useBaseInputFile.js"
+    },
+    "./useBaseInputList": {
+      "require": "./dist/useBaseInputList.cjs",
+      "types": "./dist/useBaseInputList.d.ts",
+      "import": "./dist/useBaseInputList.js"
     },
     "./useBaseInputText": {
       "require": "./dist/useBaseInputText.cjs",
