feat(vue): add `useCursor` composable for managing text cursor interactions
Introduced the `useCursor` composable in the Vue package to enhance text manipulation capabilities within Vue applications. This utility provides functions to manage cursor positions and selections programmatically, facilitating complex text interactions like selections, node traversals, and cursor positioning. The addition aims to simplify the development of text-rich applications and custom text editors by abstracting the complexities involved in handling DOM text nodes and selections.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -156,6 +156,11 @@
       "types": "./dist/useBaseState.d.ts",
       "import": "./dist/useBaseState.js"
     },
+    "./useCursor": {
+      "require": "./dist/useCursor.cjs",
+      "types": "./dist/useCursor.d.ts",
+      "import": "./dist/useCursor.js"
+    },
     "./useEventBus": {
       "require": "./dist/useEventBus.cjs",
       "types": "./dist/useEventBus.d.ts",
