--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -24,12 +24,11 @@
     "@storybook/testing-library": "0.2.2",
     "@storybook/vue3": "8.0.8",
     "@storybook/vue3-vite": "^8.1.1",
-    "@types/node": "^18.17.5",
-    "@unocss/nuxt": "0.60.2",
-    "@unocss/preset-icons": "0.60.2",
-    "@unocss/preset-mini": "0.60.2",
-    "@unocss/preset-web-fonts": "0.60.2",
-    "@unocss/reset": "0.60.2",
+    "@unocss/nuxt": "0.60.3",
+    "@unocss/preset-icons": "0.60.3",
+    "@unocss/preset-mini": "0.60.3",
+    "@unocss/preset-web-fonts": "0.60.3",
+    "@unocss/reset": "0.60.3",
     "@unshared/binary": "workspace:*",
     "@unshared/collection": "workspace:*",
     "@unshared/color": "workspace:*",
@@ -45,14 +44,12 @@
     "@unshared/vue": "workspace:*",
     "@vueuse/core": "10.9.0",
     "@vueuse/nuxt": "10.9.0",
+    "codemirror": "6.0.1",
     "nuxt": "3.11.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "storybook": "8.0.8",
-    "unocss": "0.60.2"
-  },
-  "dependencies": {
-    "codemirror": "6.0.1",
+    "unocss": "0.60.3",
     "vue": "3.4.27"
   }
 }
