feat(vue): add `useEditableProps` composable for dynamic prop management
Added a new composable function `useEditableProps` to the Vue package, which allows for creating editable references from component props. This function is particularly useful for managing prop state in a more reactive way, ensuring updates are efficiently handled through Vue's reactivity system. The primary benefit of this addition is to simplify the handling of prop changes by providing a structured way to declare props as reactive references that can be easily bound and updated in the Vue component's template. This functionality is akin to VModel but tailored specifically for prop management with additional features like custom event emission on changes, making it versatile for various use cases in component development.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -161,6 +161,11 @@
       "types": "./dist/useCursor.d.ts",
       "import": "./dist/useCursor.js"
     },
+    "./useEditableProps": {
+      "require": "./dist/useEditableProps.cjs",
+      "types": "./dist/useEditableProps.d.ts",
+      "import": "./dist/useEditableProps.js"
+    },
     "./useEventBus": {
       "require": "./dist/useEventBus.cjs",
       "types": "./dist/useEventBus.d.ts",
