--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -31,6 +31,11 @@
       "types": "./dist/BaseButton.d.ts",
       "import": "./dist/BaseButton.js"
     },
+    "./BaseDialog": {
+      "require": "./dist/BaseDialog.cjs",
+      "types": "./dist/BaseDialog.d.ts",
+      "import": "./dist/BaseDialog.js"
+    },
     "./BaseIcon": {
       "require": "./dist/BaseIcon.cjs",
       "types": "./dist/BaseIcon.d.ts",
