feat(string): introduced `repeat` function to create string repetitions
Introduced a new `repeat` function in the string package, enabling users to create repetitions of a specified string. This function allows specifying the number of repetitions and an optional separator between repetitions. This enhancement aims to provide a more flexible and powerful way to handle string manipulations related to repeating patterns, improving the utility of the string manipulation library.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -111,6 +111,11 @@
       "types": "./dist/removeTrailingQuotes.d.ts",
       "import": "./dist/removeTrailingQuotes.js"
     },
+    "./repeat": {
+      "require": "./dist/repeat.cjs",
+      "types": "./dist/repeat.d.ts",
+      "import": "./dist/repeat.js"
+    },
     "./split": {
       "require": "./dist/split.cjs",
       "types": "./dist/split.d.ts",
