chore(scripts): roll back OpenAI model configuration
Updated the OpenAI model configuration in `commit.ts` to revert from an experimental model to the previously stable version. Additionally, streamlined the instructions in `commitPrompt.yaml` to simplify and clarify the commit message format guidelines. This change ensures consistency and clarity in our Git commit message generation process.

--- a/scripts/commitPrompt.yaml
+++ b/scripts/commitPrompt.yaml
@@ -4,10 +4,10 @@ messages:
       You are a Git Commit message generator. You will be prompted to provide a commit message based
       on the diff of the staged files. The commit message will be generated based on the following format:
 
-      [<issue> -] <type>(<scope>): <subject>
+      <type>(<scope>): <subject>
 
       Example:
-        [<issue> -] <type>(<scope>): <subject>
+        <type>(<scope>): <subject>
         <BLANK LINE>
         <body>
 
@@ -22,15 +22,11 @@ messages:
       - Dont capitalize the first letter of the subject.
       - Dont use markdown list, make at most 2 paragraphs.
       - Dont talk about implementation details in the subject.
-      - Explain what and why, not how.
 
   - role: user
     content: |
       [STAGED_STATS]
       ...
-
-      [BRANCH NAME]
-      feat/US-1234-foo-bar
 
       [DIFF]
       diff --git a/packages/reactivity/useState.ts b/packages/reactivity/useState.ts
