feat(functions): add `resolve` utility function
Introduced a new utility function `resolve` in the `functions` package. This function is designed to handle values that may either be direct values, promises, or functions returning promises. It simplifies the process of resolving these different types of values, providing a unified approach to handle asynchronous and synchronous operations seamlessly. This addition enhances the module's capability to deal with complex data resolution scenarios in a more efficient way.

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -141,6 +141,11 @@
       "types": "./dist/once.d.ts",
       "import": "./dist/once.js"
     },
+    "./resolve": {
+      "require": "./dist/resolve.cjs",
+      "types": "./dist/resolve.d.ts",
+      "import": "./dist/resolve.js"
+    },
     "./setPrototypeChain": {
       "require": "./dist/setPrototypeChain.cjs",
       "types": "./dist/setPrototypeChain.d.ts",
